--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,70 @@
+* {
+    background-color: antiquewhite;
+}
 
+.footerFinal,
+.icono,
+.nav {
+    background-color: #5C5346;
+}
+
+#footer {
+    padding-top: 2%;
+    padding-bottom: 1%;
+    width: 100%;
+}
+
+#facebookLogo:hover {
+    animation: shaker 1s;
+    animation-iteration-count: infinite;
+}
+
+#twitterLogo:hover {
+    animation: shaker 1s;
+    animation-iteration-count: infinite;
+}
+
+#instagramLogo:hover {
+    animation: shaker 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shaker {
+
+    10%,
+    90% {
+        transform: translate(-1px, -2px);
+    }
+
+    20%,
+    80% {
+        transform: translate(-3px, -0px);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate(-3px, 2px);
+    }
+
+    40%,
+    60% {
+        transform: translate(-1px, -1px);
+    }
+}
+
+.Barra {
+    background-color: #CBA328;
+    height: 10px;
+    padding-bottom: 35px;
+    padding-top: 35px;
+
+}
+
+.iconoSuperior {
+    padding-left: 30px;
+}
+
+.nav-link {
+    color: white;
+}
