--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,11 @@ h1{
     display: none;
 }
 
+.dropdown-menu,
+.dropdown-item{
+background-color: antiquewhite;
+}
+
 
 @media (max-width: 992px) {
     .especial{
