--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 
 
 h1 {
-    padding: 1rem 0 2rem 0;
+    padding: 2rem 0 2rem 0;
     font-weight: 600;
     text-align: center;
 }
@@ -215,11 +215,11 @@ footer ul li a {
     margin-top: 2rem;
 }
 
-/*Características del catálogo
-*/
+/* ============= PRODUCTOS ================== */
+
 .container-products {
     width: 100%;
-    margin: 35px 0 35px 0;
+    /* margin: 35px 0 35px 0; */
 }
 
 .catalogo-navbar {
@@ -230,29 +230,35 @@ footer ul li a {
 
 }
 
-.titulo-catalogo {
-    text-align: center;
+.catalogo-navbar ul{
+    padding: 0;
+}
 
+.catalogo-navbar ul li {
+    padding-bottom: 5rem;
+}
+
+.titulo-catalogo {
+    text-align: center; 
 }
 
 .contenedor-navbar-catalogo {
-    border-right: solid #000;
-    padding-top: 1%;
+    border-right: solid #353028;
     margin: 80px 0 42px 0;
 }
 
 .filtro-catalogo {
-    font-size: 35px;
+    font-size: 2.5rem;
     text-decoration: none;
-    color: black;
+    color: #353028;
     font-weight: bold;
     list-style-type: none;
 }
 
 .filtro-catalogo:hover {
     cursor: pointer;
-    font-size: 4.5rem;
+    font-size: 2.8rem;
     transition: .5s;
-    text-shadow: #CBA328 3px 3px;
+    text-shadow: 2px 0px 1px#CBA328 ;
 }
 
