--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 
 
 h1 {
-    padding: 2rem 0 2rem 0;
+    padding: 3rem 0 2rem 0;
     font-weight: 600;
     text-align: center;
 }
@@ -151,9 +151,9 @@ footer ul li a {
     }
 }
 
-/* ========== CARDS DE "NOSOTROS" ============== */
+/* ========== CARDS ============== */
 
-.nombre__integrante{
+.title__card{
     display: flex;
     justify-content: center;
     text-align: center;
@@ -162,7 +162,7 @@ footer ul li a {
     font-weight: bold;
 }
 
-.profesion__integrante{
+.subtitle__card{
     text-align: center;
     color: rgb(157, 140, 10);
     font-size: 2rem;
@@ -219,7 +219,6 @@ footer ul li a {
 
 .container-products {
     width: 100%;
-    /* margin: 35px 0 35px 0; */
 }
 
 .catalogo-navbar {
@@ -244,7 +243,7 @@ footer ul li a {
 
 .contenedor-navbar-catalogo {
     border-right: solid #353028;
-    margin: 80px 0 42px 0;
+    margin: 90px 0 10px 0;
 }
 
 .filtro-catalogo {
@@ -262,3 +261,8 @@ footer ul li a {
     text-shadow: 2px 0px 1px#CBA328 ;
 }
 
+.btn-producto{
+    font-size: 1.3rem;
+    width:9rem; 
+    margin: 1rem 2rem 2rem 0;
+}
