--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,17 @@ body {
 
 
 h1 {
-    padding: 3rem 0 2rem 0;
+    padding: 2rem 0 2rem 0;
     font-weight: 600;
     text-align: center;
+    font-size: 2.5rem;
+}
+
+h2 {
+    padding: 2rem 0 1rem 0;
+    font-weight: 600;
+    text-align: center;
+    font-size: 2.3rem;
 }
 
 /* ======= NAVBAR ======== */
@@ -174,7 +182,8 @@ footer ul li a {
 .card-body{
     font-size: 2.5rem;
     color: #353028;
-}
+    padding: .5rem 1.5rem 2rem 1.5rem;
+    }
 
 .card{
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
@@ -183,6 +192,22 @@ footer ul li a {
 .card-team:hover {
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.3);
 }
+
+.card-footer{
+    background-color: transparent;
+}
+
+.social__media{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+
+.social__media__icon{
+    font-size: 2.5rem;
+}
+
 
 /* ============= CONCACTO ================== */
 .inf-contact {
