--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@
     font-size: 62.5%;
 }
 
+p{
+    font-family: 'georama', sans-serif;
+    font-size: 62.5%;
+}
+
 html{
     height: 100%;
     box-sizing: border-box;
