se corrige el color de los botones y responsividad del campo cantidad

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@
     font-size: 62.5%;
 }
 
+button{
+    color: antiquewhite;
+    background-color: #CBA328;
+}
+
 p{
     font-family: 'georama', sans-serif;
     font-size: 62.5%;
