--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ h2 {
     font-size: 2.3rem;
 }
 
+p{
+    font-size: 1.6rem;
+}
+
 /* ======= NAVBAR ======== */
 .nav-item {
     font-size: 2rem;
@@ -85,7 +89,6 @@ footer {
     left: 0;
     bottom: 0;
     background-color: #5C5346;
-
 }
 
 
@@ -96,17 +99,17 @@ footer ul li a {
 
 #facebookLogo:hover{
     animation: shaker 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
 }
 
 #twitterLogo:hover {
     animation: shaker 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
 }
 
 #instagramLogo:hover {
     animation: shaker 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
 }
 
 @keyframes shaker {
@@ -349,7 +352,6 @@ form{
     .informacion__seccion>div {
         width: 100%;
     }
-
 }
 
 @media Screen and (min-width:1024px) {
@@ -360,4 +362,19 @@ form{
     .informacion__seccion>div {
         width: 50%;
     }
+}
+
+
+.texto_boton{
+    font-size: 1.5rem;
+    margin-right: .8rem;
+}
+
+.home__icon {
+    font-size: 2rem;
+}
+
+.featurette-divider{
+    margin-top: 5rem;
+    margin-bottom: 2.5rem;
 }
