--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@ body {
     color: #353028;
 }
 
-
 h1 {
     padding: 2rem 0 2rem 0;
     font-weight: 600;
@@ -36,7 +35,7 @@ h2 {
     font-size: 2.3rem;
 }
 
-p {
+p{
     font-size: 1.6rem;
 }
 
@@ -45,7 +44,6 @@ p {
     font-size: 2rem;
     padding-right: 4rem;
 }
-
 
 .navbar-brand {
     padding: 1rem 6rem 1rem 2rem;
@@ -78,7 +76,6 @@ p {
 }
 
 
-
 /* ======= FOOTER ======== */
 footer {
     margin-top: 3rem;
@@ -91,13 +88,11 @@ footer {
     background-color: #1c412f;
 }
 
-
 footer ul li a {
     padding: 0 1rem 0 1rem;
 }
 
-
-#facebookLogo:hover {
+#facebookLogo:hover{
     animation: shaker 1s;
     animation-iteration-count: 1;
 }
@@ -134,7 +129,6 @@ footer ul li a {
     60% {
         transform: translate(-1px, -1px);
     }
-
 }
 
 /* ========== CARDS ============== */
@@ -187,7 +181,6 @@ footer ul li a {
 }
 
 
-
 /* ============= CONCACTO ================== */
 .inf-contact {
     padding-top: 5%;
@@ -236,17 +229,16 @@ form label,
     font-size: 1.6rem;
 }
 
-
-label {
+label{
     margin-left: 3rem;
 }
 
-.form-control {
+.form-control{
     width: 90%;
     margin: auto;
 }
 
-form {
+form{
     padding-top: 5%;
 }
 
@@ -261,8 +253,8 @@ form {
     margin-right: 1rem;
 }
 
-.icon__send {
-    margin: 0 1rem 0 auto;
+.icon__send{
+    margin:0 1rem 0 auto; 
     font-size: 1.5rem;
 }
 
@@ -276,6 +268,7 @@ form {
 }
 
 /* ============= PRODUCTOS ================== */
+
 
 .container-products {
     width: 100%;
@@ -411,11 +404,63 @@ form {
     font-size: 2rem;
 }
 
-
 .imagen-principal {
     width: 300px;
     height: 450px;
 }
 
-
 /* modal */
+
+
+/* ============= MEDIAS ================== */
+
+@media screen and (max-width: 992px) {
+    .especial {
+        display: contents;
+    }
+
+    .iconoSuperior {
+        display: none;
+    }
+
+    .filtro-catalogo {
+        display: none;
+    }
+
+    .contenedor-navbar-catalogo {
+        display: hidden;
+        border-right: none;
+    }
+
+    .informacion__seccion {
+        flex-direction: column;
+    }
+
+    .informacion__seccion>div {
+        width: 100%;
+    }
+}
+
+@media Screen and (min-width:1024px) {
+    .informacion__seccion {
+        flex-direction: row;
+    }
+
+    .informacion__seccion>div {
+        width: 50%;
+    }
+}
+
+.texto_boton{
+    font-size: 1.5rem;
+    margin-right: .8rem;
+}
+
+.home__icon {
+    font-size: 2rem;
+}
+
+.featurette-divider{
+    margin-top: 5rem;
+    margin-bottom: 2.5rem;
+}
