se corrige nosotros y productos

--- a/css/main.css
+++ b/css/main.css
@@ -523,3 +523,12 @@ form {
     background-color: #1c412f;
     color: white;
 }
+
+.static {
+    position:absolute;
+    background: white;
+  }
+  
+  .static:hover {
+    opacity:0;
+  }
