Se corrige formulario para agregar productos

--- a/css/main.css
+++ b/css/main.css
@@ -548,7 +548,7 @@ form {
     opacity: 0;
 }
 
-/* =========  Cargar productos ========= */
+/* =========  Cargar productos nuevos ========= */
 .container_label {
     width: 95%;
 }
